Fixed footer wrap and location on ipad

--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
 
 body {
   font-family: Helvetica, sans-serif;
-  /* padding: 0 80px; */
+  min-height: 100vh;
   display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 header, main, footer, body {
@@ -72,7 +73,7 @@ body {
   margin: auto;
 }
 
-header, footer {
+header {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -178,7 +179,9 @@ MAIN
 FOOTER
 */
 footer {
-  flex-flow: column-reverse wrap;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap-reverse;
 }
 
 footer p {
